--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="form-container">
             <h4 class="text-center mb-4">Register</h4>
-            <form id="registerForm">
+            <form id="registerForm" action="POST" data-netlify="true">
                 <div class="mb-3">
                     <label for="name" class="form-label">Full Name</label>
                     <input type="text" class="form-control" id="name" placeholder="Enter your name" required minlength="5">
